Swagger 추가 및 MVC 형태로 수정